# fastpy

./: CMakeLists.txt  README  config.conf  config_example.conf
docs/: readme.ru
examples/: adpater_django.py  wsgi_example.py
fastPy.xcodeproj/: project.pbxproj
src/: fastpy.cpp  fastpy.h  fp_config.cpp  fp_config.h  fp_core.cpp  fp_core.h  fp_fastcgi.cpp  fp_fastcgi.h  fp_handler.cpp  fp_handler.h  fp_helpers.cpp  fp_helpers.h  fp_ipc.cpp  fp_ipc.h  fp_log.cpp  fp_log.h  fp_thread.cpp  fp_thread.h  fp_worker.cpp  fp_worker.h  fp_worker_old.cpp  fp_worker_old.h
